--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  
 jobs:
   build-and-test:
     executor:
@@ -10,7 +11,15 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+            - run:
+              command: mocha test --reporter mocha-junit-reporter
+              environment:
+                MOCHA_FILE: ~/junit/test-results.xml
+              when: always
+            - store_test_results:
+                path: ~/test-results/mocha
+            - store_artifacts:
+                path: ~/test-results/mocha
 workflows:
     build-and-test:
       jobs:
