--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^2.0.0",
     "node-mocks-http": "^1.7.3"
   }
 }
