--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
             - run:
               command: mocha test --reporter mocha-junit-reporter
               environment:
-                MOCHA_FILE: ~/junit/test-results.xml
-              when: always
+                MOCHA_FILE: ~/test-results/mocha/results.xml
             - store_test_results:
                 path: ~/test-results/mocha
             - store_artifacts:
