--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
-  
 jobs:
   build-and-test:
     executor:
@@ -12,9 +11,9 @@ jobs:
           steps:
             - run: npm install
             - run:
-              command: mocha test --reporter mocha-junit-reporter
-              environment:
-                MOCHA_FILE: ~/test-results/mocha/results.xml
+                command: npm test --reporter mocha-junit-reporter
+                environment:
+                  MOCHA_FILE: ~/test-results/mocha/results.xml
             - store_test_results:
                 path: ~/test-results/mocha
             - store_artifacts:
