--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test.js --recursive"
+    "test": "mocha test.js --recursive --reporter mocha-junit-reporter"
   },
   "repository": {
     "type": "git",
